# eve_traider

./: .gitignore  go.work
go-backend/local_func/: create_id_from_names.go  get_id_from_json.go
go-backend/run/: run.go
go-backend/update_price_list/: update_price_list.go
go-backend/utils/: cron_parse.go  index.go
go-backend/web/: web.go
go-backend/web/api/: all_items.go
go-backend/web/pages/: index.html
go-backend/web/proxys/: cache.go
go-backend/web/static/: index-BCC1uDgb.css  index-BnM_DqYC.js  index-C9TIhAhM.js  index-DItNnTPZ.css
go-updater/: main.go
go-updater/cmd/: download.go  upload.go
local_server/: build.sh  go.mod  main.go
local_server/local_func/: add_items_from_json.go
local_server/run/: migration.go
local_server/update_price_list/: v2.go
local_server/web/: web.go
local_server/web/api/: all_prices.go
local_server/web/pages/: index.html
local_server/web/static/: index-CvUY6LTV.js  index-DDcqqjfD.css  index-DEJvDimg.js  index-DXqCbYip.css  index-k7FwKrlV.js  index-sZw20Vl1.js  local_storage.js  main.js  render.js
rust-launcher/: Cargo.toml
rust-launcher/src/: backend_manager.rs  main.rs  main.rs_
scripts/: build.go
updater/: build.sh  go.mod  main.go
updater/cmd/: download.go
vue/: vite.config.ts
vue/src/: App.vue  storage.ts
vue/src/components/: BarChart.vue  Favourite.vue  LeftPanel.vue  RegionMarketInfo.vue  TreeCategory.vue
vue/src/pages/: index.vue
vue/src/utils/: API.ts  delay.ts  fovarites.ts
web-ui/: TODO  index.html  vite.config.ts
web-ui/src/: App.vue  BarChart.css  main.ts  style.css
(+31 files in other folders)
